yaml/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  #namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        #command:
        #- sh
        #- -c
        #- 'while true; do date > /mnt/index.html; hostname >> /mnt/index.html; sleep $(($RANDOM % 5 + 5)); done'
        imagePullPolicy: IfNotPresent
        name: nginx
      #   volumeMounts:
      #   - mountPath: /mnt
      #     name: nfs-pvc
      # volumes:
      # - name: nfs-pvc
      #   persistentVolumeClaim:
      #     claimName: fast
