yaml/ingress-mongo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mongo
  namespace: my-space
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mongo.example.com
    http:
      paths:
      - path: 
        backend:
          serviceName: mongo
          servicePort: 27017
